tests/errors/type_check/function/duplicate_local_name.err.expected
error: at 4:13: [TC-DuplicateLocalName] Duplicate variable name 'x' in locals/parameters of function 'f'
   |
 4 |             x: i64;
   |             ^^^^^^^
